# sinilink-xy-psu

./: Cargo.toml  README.md
.github/workflows/: docs.yml  test.yml
examples/: serial.rs
src/: error.rs  lib.rs  mock_serial.rs  preset.rs  psu.rs  register.rs  registers.rs  scaling.rs  types.rs
