[package]
name = "sinilink-xy-psu"
version = "0.1.0"
edition = "2024"

[features]
default = []
no-std = []

[dependencies]
embedded-io = "0.6.1"
fugit = "0.3.7"
heapless = "0.8.0"
modular-bitfield = "0.12"
rmodbus = { version = "0.10", default-features = false, features = ["heapless"] }
strum = { version = "0.27.2", default-features = false, features = [
    "strum_macros",
] }
strum_macros = "0.27.2"
thiserror = { version = "2.0", default-features = false }


[dev-dependencies]
serial = "0.4.0"
