[package]
name = "sinilink-xy-psu"
version = "0.1.0"
edition = "2024"

[features]
default = []
no_std = []

[dependencies]
embedded-io = "0.7"
fugit = "0.3"
rmodbus = { version = "0.12", default-features = false, features = ["heapless"] }
heapless = "0.9"
strum = { version = "0.27", default-features = false, features = [
    "strum_macros",
] }
strum_macros = "0.27"
thiserror = { version = "2.0", default-features = false }
modular-bitfield = "0.13"


[dev-dependencies]
inquire = "0.9"
serialport = "4.6"
